@@ -2,11 +2,14 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:five="http://namespaces.zope.org/five"
     i18n_domain="medialog.googlefonts">
+    
+   <five:registerPackage package="." initialize=".initialize" />
 
    <include file="profiles.zcml" />
    <include package=".browser" />
-
+   
   <utility
   	provides="zope.schema.interfaces.IVocabularyFactory"
     component="medialog.googlefonts.vocabularies.FontsVocabulary"
