@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>2</version>
+  <version>21</version>
   <dependencies>
       <dependency>profile-medialog.controlpanel:default</dependency>
   </dependencies>
