@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object>
+    <order manager="plone.htmlhead.links" skinname="">
+        <viewlet name="medialog.googlefonts.head" insert-after="*" />
+    </order>
+</object>
