@@ -1,0 +1,5 @@
+<layers>
+    <layer name="medialog.googlefonts" 
+           interface="medialog.googlefonts.interfaces.IGooglefontsLayer"
+           remove="True" />
+</layers>
