@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+
+    <javascript 
+        id="googlefonts.js"
+        remove="True"
+    />
+    
+</object>
