@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_properties">
+ <object name="googlefonts_properties" remove="True">
+ </object>
+</object>    
